# voice

./: .dockerignore  .env  .env.dev  .gitignore  Cargo.toml  ROADMAP.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  run.sh  setup.sh  source_env.sh
frontend/: .env.local  Dockerfile  next.config.js
frontend/src/components/analysis/: AnalysisDashboard.tsx
frontend/src/components/audio/: AudioRecorder.tsx
frontend/src/components/visualization/: WaveformVisualizer.tsx
frontend/src/hooks/: useAudioRecorder.ts
frontend/src/store/: analysisStore.ts
frontend/src/types/: index.ts
monitoring/: prometheus.yml
python-backend/: .env  Dockerfile  README.md  pyproject.toml
python-backend/src/: main.py
python-backend/src/models/: schemas.py
python-backend/src/services/: diarization_service.py  emotion_service.py  whisper_service.py
python-backend/src/utils/: audio_utils.py
python-backend/voice_analytics/: main.py
python-backend/voice_analytics/api/: routes.py
python-backend/voice_analytics/core/: settings.py
rust-backend/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
rust-backend/src/: api_docs.rs  error.rs  main.rs
rust-backend/src/config/: mod.rs
rust-backend/src/handlers/: analysis.rs  audio.rs  health.rs  mod.rs
rust-backend/src/models/: audio.rs  mod.rs
rust-backend/src/services/: audio_processor.rs  mod.rs
rust-backend/src/utils/: mod.rs
src/: main.rs
