[tool.poetry]
name = "voice-analytics-python"
version = "0.1.0"
description = "Voice Analytics AI Services"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
numpy = "^1.24.0"
scipy = "^1.11.0"
librosa = "^0.10.1"
soundfile = "^0.12.1"
faster-whisper = "^0.9.0"
speechbrain = "^0.5.16"
prometheus-client = "^0.19.0"
python-jose = "^3.3.0"
torch = { version = "^2.1.0+cpu", source = "pytorch" }
torchaudio = { version = "^2.1.0+cpu", source = "pytorch" }
transformers = "^4.36.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.scripts]
start = "voice_analytics.main:start"
dev = "voice_analytics.main:dev" 