[package]
name = "voice-analytics-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.3"
actix-cors = "0.6"
actix-multipart = "0.6"
actix-web-actors = "4.2"

# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

# Audio processing
symphonia = { version = "0.5.1", features = ["mp3", "wav", "flac"] }
rubato = "0.12"
dasp = "0.11"

# Database
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
redis = { version = "0.22", features = ["tokio-comp"] }

# Authentication & Security
jsonwebtoken = "8.1"
argon2 = "0.4"
uuid = { version = "1.2", features = ["v4", "serde"] }

# Logging & Monitoring
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0.38"
anyhow = "1.0.68"

# Utils
dotenv = "0.15"
chrono = { version = "0.4.23", features = ["serde"] }

# Add these for Swagger
utoipa = { version = "4.1", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
criterion = "0.4"
test-case = "2.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true 